@@ -57,3 +57,5 @@ fun ModuleDependency.excludeCoroutines() {
 }
 
 sourceSets { test { kotlin { srcDirs("ide-laf-bridge-tests/src/test/kotlin") } } }
+
+tasks.withType<Test>().configureEach { jvmArgs("--enable-native-access=ALL-UNNAMED") }
